--- a/app/assets/stylesheets/shared.css.scss
+++ b/app/assets/stylesheets/shared.css.scss
@@ -56,11 +56,11 @@ a
 
 .styled-paragraph
 {
-  font-family: $fontUbuntuMono;
+  font-family: $fontInconsolata;
   font-weight: normal;
   font-size: 18px;
-  color: $colorDeepSeaGreen;
-  line-height: 20px;
+  color: $colorBlack;
+  line-height: 22px;
   margin-left: 30px;
   padding-right: 45px;
 }
@@ -180,9 +180,11 @@ a
 
 .grow
 {
+  -ms-transition-duration: 0.3s;
   -webkit-transition-duration: 0.3s;
   -moz-transition-duration: 0.3s;
   transition-duration: 0.3s;
+  -ms-transition-property: -ms-transform;
   -webkit-transition-property: -webkit-transform;
   -moz-transition-property: -moz-transform;
   transition-property: transform;
@@ -204,10 +206,15 @@ a
 .float
 {
   display: inline-block;
+  -moz-transition-duration: 0.3s;
+  -ms-transition-duration: 0.3s;
   -webkit-transition-duration: 0.3s;
   transition-duration: 0.3s;
+  -moz-transition-property: -moz-transform;
+  -ms-transition-property: -ms-transform;
   -webkit-transition-property: -webkit-transform;
   transition-property: transform;
+  -moz-transform: translateZ(0);
   -webkit-transform: translateZ(0);
   -ms-transform: translateZ(0);
   transform: translateZ(0);
@@ -215,6 +222,7 @@ a
 
   &:hover
   {
+    -moz-transform: translateY(-5px);
     -webkit-transform: translateY(-5px);
     -ms-transform: translateY(-5px);
     transform: translateY(-5px);
