--- a/app/assets/stylesheets/tweets.css.scss
+++ b/app/assets/stylesheets/tweets.css.scss
@@ -6,10 +6,10 @@
 
 .tweet-text
 {
-  font-family: $fontUbuntuMono;
+  font-family: $fontInconsolata;
   font-weight: normal;
   font-size: 16px;
-  color: $colorDeepSeaGreen;
+  color: $colorBlack;
 }
 
 .tweets-body
@@ -29,4 +29,7 @@
   width: 0 auto;
   margin: 10 auto;
   margin-bottom: 30px;
+  
+  border: 3px solid rgba(0, 0, 0, 0.35);
+  border-radius: 5px;
 }
